--- a/scripts/yottaflux.conf
+++ b/scripts/yottaflux.conf
@@ -48,8 +48,6 @@ bind=0.0.0.0
 addnode=us-east-1-seed.yottaflux.ai:8559
 addnode=us-west-1-seed.yottaflux.ai:8559
 addnode=eu-west-2-seed.yottaflux.ai:8559
-addnode=eu-central-2-seed.yottaflux.ai:8559
-addnode=af-south-1-seed.yottaflux.ai:8559
 addnode=ap-southeast-2-seed.yottaflux.ai:8559
 
 
@@ -74,6 +72,7 @@ server=1
 # Bind to given address to listen for JSON-RPC connections. Use [host]:port notation for IPv6.
 # This option can be specified multiple times (default: bind to all interfaces)
 rpcbind=127.0.0.1
+rpcallowip=127.0.0.1/32
 
 # If no rpcpassword is set, rpc cookie auth is sought. The default `-rpccookiefile` name
 # is .cookie and found in the `-datadir` being used for ravend. This option is typically used
