--- a/scripts/yottaflux_test.conf
+++ b/scripts/yottaflux_test.conf
@@ -72,6 +72,7 @@ server=1
 # Bind to given address to listen for JSON-RPC connections. Use [host]:port notation for IPv6.
 # This option can be specified multiple times (default: bind to all interfaces)
 rpcbind=127.0.0.1
+rpcallowip=127.0.0.1/32
 
 # If no rpcpassword is set, rpc cookie auth is sought. The default `-rpccookiefile` name
 # is .cookie and found in the `-datadir` being used for ravend. This option is typically used
@@ -111,7 +112,7 @@ rpcbind=127.0.0.1
 
 # server=1 tells Raven-Qt to accept JSON-RPC commands.
 # it is also read by ravend to determine if RPC should be enabled 
-#rpcallowip=10.1.1.34/255.255.255.0
+
 #rpcallowip=1.2.3.4/24
 #rpcallowip=2001:db8:85a3:0:0:8a2e:370:7334/96
 
