Conf file updates

--- a/scripts/yottaflux.conf
+++ b/scripts/yottaflux.conf
@@ -74,6 +74,9 @@ server=1
 rpcbind=127.0.0.1
 rpcallowip=127.0.0.1/32
 
+datadir=/yottaflux
+rpccookiefile=.cookie
+
 # If no rpcpassword is set, rpc cookie auth is sought. The default `-rpccookiefile` name
 # is .cookie and found in the `-datadir` being used for ravend. This option is typically used
 # when the server and client are run as the same user.
